src/objects/Participating_Store__c.object
<CustomObject>
    <fields>
        <fullName>PlusMCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PlusMCampaign</label>
        <referenceTo>PlusMCampaigns__c</referenceTo>
        <relationshipLabel>Participating Stores</relationshipLabel>
        <relationshipName>Participating_Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>Record ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stores__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stores</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Participating Stores</relationshipLabel>
        <relationshipName>Participating_Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Participating Store</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Part. Store # {0000}</displayFormat>
        <label>Participating Store No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participating Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>